--- a/htmlPractice.html
+++ b/htmlPractice.html
@@ -1,3 +1,5 @@
+// https://www.javatpoint.com/html-interview-questions 
+
 // what is HTML? Hyper Text Markup Language
 
 //tags: HTML tags are composed of three things: an opening tag, content and ending tag.
@@ -9,3 +11,17 @@
 //Semantic HTML is a coding style. ex  using strong instead of b for bold 
 
 //insert copyright or other symbols: &copy or &#169
+
+//<header>: It is used to define a header for a document or a section.
+//<nav>: It is used to define a container for navigation links
+//<section>: It is used to define a section in a document
+//<article>: It is used to define an independent, self-contained article
+//<aside>: It is used to define content aside from the content (like a sidebar)
+//<footer>: It is used to define a footer for a document or a section
+  
+  //marquee: scrolling text on a webpage 
+  
+  //span tag: add color, background on text, highlight... inline changes like the middle 
+  
+  //An iframe is used to display a web page within a web page. also nested 
+
