--- a/htmlPractice.html
+++ b/htmlPractice.html
@@ -25,4 +25,9 @@
   
   //An iframe is used to display a web page within a web page. also nested 
 
-// what are entities: number 26
+// what are entities: HTML character entities are used as a replacement for reserved characters in HTML. You can also replace characters that are not present on your keyboard by entities. These characters are replaced because some characters are reserved in HTML.
+
+ 	&lt;
+  
+  //canvas element
+  
