--- a/htmlPractice.html
+++ b/htmlPractice.html
@@ -29,5 +29,7 @@
 
  	&lt;
   
-  //canvas element
+  //canvas element: <canvas> element is a container that is used to draw graphics on the web page using scripting language like JavaScript
+  
+  //SVG
   
