--- a/htmlPractice.html
+++ b/htmlPractice.html
@@ -31,5 +31,5 @@
   
   //canvas element: <canvas> element is a container that is used to draw graphics on the web page using scripting language like JavaScript
   
-  //SVG
+  //SVG:
   
