--- a/htmlPractice.html
+++ b/htmlPractice.html
@@ -31,5 +31,8 @@
   
   //canvas element: <canvas> element is a container that is used to draw graphics on the web page using scripting language like JavaScript, copyright 
   
-  //SVG:
+  //SVG:SVG is used to describe the two-dimensional vector and vector/raster graphics
+  <svg width="100" height="100">    
+ <circle cx="50" cy="50" r="40" stroke="yellow" stroke-width="4" fill="red" />    
+</svg>   //this creates a red circle
   
