--- a/htmlPractice.html
+++ b/htmlPractice.html
@@ -36,3 +36,5 @@
  <circle cx="50" cy="50" r="40" stroke="yellow" stroke-width="4" fill="red" />    
 </svg>   //this creates a red circle
   
+  //new form elements in HTML:  color, date, datetime-local, email, time URL, range, telephone, numbr, search 
+  
