--- a/htmlPractice.html
+++ b/htmlPractice.html
@@ -38,3 +38,6 @@
   
   //new form elements in HTML:  color, date, datetime-local, email, time URL, range, telephone, numbr, search 
   
+// difference between ID and class 
+  // id : unique ina pafe and can apply to at most one element 
+  //class selector can be multiple elements 
